Fix typo in profile image class name and update CSS variables for improved styling

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <footer>
-                <img src="images/image-avatar.png" alt="" class="pofile">
+                <img src="images/image-avatar.png" alt="" class="profile">
                 <h3 class="status">Creation of </h3>
                 <h3 class="name">Jules Wyvern</h3>
             </footer>
