Refactor footer structure in index.html and update CSS class for consistency

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                     <h4 class="right-text">3 days left</h4>
                 </div>
             </div>
-            <footer>
+            <div class="footer">
                 <img src="images/image-avatar.png" alt="" class="profile">
                 <h3 class="status">Creation of </h3>
                 <h3 class="name">Jules Wyvern</h3>
-            </footer>
+            </div>
         </header>
     </main>
 </body>
